<resources>
    <string name="app_name">CarRental</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="please_add_the_required_information_about_your_car">Please add the required information about your car.</string>
    <string name="car_details">Car Details</string>
    <string name="car_price">Car Price</string>
    <string name="car_name">Car Name</string>
    <string name="save">Save</string>
    <string name="car_color">Car Color</string>
    <string name="sign_in_required">Sign In Required</string>
    <string name="please_sign_in_or_create_an_account_before_requesting_a_flight">Please sign in or create an account before requesting a flight.</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="available_cars">Available Cars</string>
    <string name="my_cars">My Cars</string>
    <string name="rent_now">Rent Now !</string>
    <string name="per_day">"$ per day"</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
</resources>