<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_sign_in_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:lineSpacingExtra="6sp"
            android:text="@string/car_details"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_please_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="56dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/please_add_the_required_information_about_your_car"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_sign_in_required"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_required" />

        <TextView
            android:id="@+id/tv_car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/car_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/tv_sign_in_required"
            app:layout_constraintTop_toBottomOf="@id/tv_please_sign_in" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_car_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_car_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_car_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/car_price"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/tv_sign_in_required"
            app:layout_constraintTop_toBottomOf="@id/et_car_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_car_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_car_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_car_price_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_car_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/car_color"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/tv_sign_in_required"
            app:layout_constraintTop_toBottomOf="@id/et_car_price" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_car_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_car_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_car_color_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_iv_selection"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_image_selection"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/et_car_color">

            <ImageView
                android:id="@+id/iv_car_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_add_photo_alternate_24" />
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/shape_primary_button"
            android:backgroundTint="@null"
            android:lineSpacingExtra="4sp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/et_car_color"
            app:layout_constraintStart_toStartOf="@id/et_car_color"
            app:layout_constraintTop_toBottomOf="@id/cv_iv_selection" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            android:progressTint="@color/black"
            android:secondaryProgressTint="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
